// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigurationCard api should NOT call handleClick 1`] = `
<Connect(ConfigurationCardCore)
  detailLoaded={false}
  extra={Array []}
  handleClick={[Function]}
  hasPackages={true}
  hasProcesses={true}
  hasRepositories={true}
  hasServices={true}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ConfigurationCardCore
    configuration={
      Object {
        "packages": Array [
          "packages",
        ],
        "processes": Array [
          "processes",
        ],
        "repositories": Object {
          "disabled": Array [],
          "enabled": Array [
            Object {
              "base_url": "test-url",
              "enabled": true,
              "gpgcheck": true,
              "name": "test-name",
            },
          ],
        },
        "services": Array [
          "services",
        ],
      }
    }
    detailLoaded={true}
    dispatch={[Function]}
    extra={Array []}
    handleClick={[Function]}
    hasPackages={true}
    hasProcesses={true}
    hasRepositories={true}
    hasServices={true}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  >
    <LoadingCard
      isLoading={false}
      items={
        Array [
          Object {
            "onClick": [Function],
            "singular": "package",
            "target": "installed_packages",
            "title": "Installed packages",
            "value": 1,
          },
          Object {
            "onClick": [Function],
            "singular": "service",
            "target": "services",
            "title": "Services",
            "value": 1,
          },
          Object {
            "onClick": [Function],
            "plural": "processes",
            "singular": "process",
            "target": "running_processes",
            "title": "Running processes",
            "value": 1,
          },
          Object {
            "onClick": [Function],
            "target": "repositories",
            "title": "Repositories",
            "value": "1 enabled",
          },
        ]
      }
      title="Configuration"
    >
      <Card>
        <article
          className="pf-c-card"
          data-ouia-component-id="OUIA-Generated-Card-4"
          data-ouia-component-type="PF4/Card"
          data-ouia-safe={true}
          id=""
        >
          <CardBody>
            <div
              className="pf-c-card__body"
            >
              <Stack
                hasGutter={true}
              >
                <div
                  className="pf-l-stack pf-m-gutter"
                >
                  <StackItem>
                    <div
                      className="pf-l-stack__item"
                    >
                      <TextContent>
                        <div
                          className="pf-c-content"
                        >
                          <Text
                            component="h1"
                          >
                            <h1
                              className=""
                              data-ouia-component-id="OUIA-Generated-Text-4"
                              data-ouia-component-type="PF4/Text"
                              data-ouia-safe={true}
                              data-pf-content={true}
                            >
                              Configuration
                            </h1>
                          </Text>
                        </div>
                      </TextContent>
                    </div>
                  </StackItem>
                  <StackItem
                    isFilled={true}
                  >
                    <div
                      className="pf-l-stack__item pf-m-fill"
                    >
                      <TextContent>
                        <div
                          className="pf-c-content"
                        >
                          <TextList
                            component="dl"
                          >
                            <dl
                              className=""
                            >
                              <TextListItem
                                component="dt"
                              >
                                <dt
                                  className=""
                                >
                                  Installed packages
                                </dt>
                              </TextListItem>
                              <TextListItem
                                component="dd"
                              >
                                <dd
                                  className=""
                                >
                                  <Clickable
                                    onClick={[Function]}
                                    singular="package"
                                    target="installed_packages"
                                    value={1}
                                  >
                                    <a
                                      href="http://localhost:5000//installed_packages"
                                      onClick={[Function]}
                                    >
                                      1 package
                                    </a>
                                  </Clickable>
                                </dd>
                              </TextListItem>
                              <TextListItem
                                component="dt"
                              >
                                <dt
                                  className=""
                                >
                                  Services
                                </dt>
                              </TextListItem>
                              <TextListItem
                                component="dd"
                              >
                                <dd
                                  className=""
                                >
                                  <Clickable
                                    onClick={[Function]}
                                    singular="service"
                                    target="services"
                                    value={1}
                                  >
                                    <a
                                      href="http://localhost:5000//services"
                                      onClick={[Function]}
                                    >
                                      1 service
                                    </a>
                                  </Clickable>
                                </dd>
                              </TextListItem>
                              <TextListItem
                                component="dt"
                              >
                                <dt
                                  className=""
                                >
                                  Running processes
                                </dt>
                              </TextListItem>
                              <TextListItem
                                component="dd"
                              >
                                <dd
                                  className=""
                                >
                                  <Clickable
                                    onClick={[Function]}
                                    plural="processes"
                                    singular="process"
                                    target="running_processes"
                                    value={1}
                                  >
                                    <a
                                      href="http://localhost:5000//running_processes"
                                      onClick={[Function]}
                                    >
                                      1 process
                                    </a>
                                  </Clickable>
                                </dd>
                              </TextListItem>
                              <TextListItem
                                component="dt"
                              >
                                <dt
                                  className=""
                                >
                                  Repositories
                                </dt>
                              </TextListItem>
                              <TextListItem
                                component="dd"
                              >
                                <dd
                                  className=""
                                >
                                  <Clickable
                                    onClick={[Function]}
                                    target="repositories"
                                    value="1 enabled"
                                  >
                                    <a
                                      href="http://localhost:5000//repositories"
                                      onClick={[Function]}
                                    >
                                      1 enabled
                                    </a>
                                  </Clickable>
                                </dd>
                              </TextListItem>
                            </dl>
                          </TextList>
                        </div>
                      </TextContent>
                    </div>
                  </StackItem>
                </div>
              </Stack>
            </div>
          </CardBody>
        </article>
      </Card>
    </LoadingCard>
  </ConfigurationCardCore>
</Connect(ConfigurationCardCore)>
`;

exports[`ConfigurationCard should not render hasPackages 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-9"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-9"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Configuration
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Services
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//services"
              >
                1 service
              </a>
            </dd>
            <dt
              class=""
            >
              Running processes
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//running_processes"
              >
                1 process
              </a>
            </dd>
            <dt
              class=""
            >
              Repositories
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//repositories"
              >
                1 enabled
              </a>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`ConfigurationCard should not render hasProcesses 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-11"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-11"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Configuration
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Installed packages
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//installed_packages"
              >
                1 package
              </a>
            </dd>
            <dt
              class=""
            >
              Services
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//services"
              >
                1 service
              </a>
            </dd>
            <dt
              class=""
            >
              Repositories
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//repositories"
              >
                1 enabled
              </a>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`ConfigurationCard should not render hasRepositories 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-12"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-12"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Configuration
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Installed packages
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//installed_packages"
              >
                1 package
              </a>
            </dd>
            <dt
              class=""
            >
              Services
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//services"
              >
                1 service
              </a>
            </dd>
            <dt
              class=""
            >
              Running processes
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//running_processes"
              >
                1 process
              </a>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`ConfigurationCard should not render hasServices 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-10"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-10"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Configuration
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Installed packages
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//installed_packages"
              >
                1 package
              </a>
            </dd>
            <dt
              class=""
            >
              Running processes
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//running_processes"
              >
                1 process
              </a>
            </dd>
            <dt
              class=""
            >
              Repositories
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//repositories"
              >
                1 enabled
              </a>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`ConfigurationCard should render correctly - no data 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-1"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-1"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Configuration
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Installed packages
            </dt>
            <dd
              class=""
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
            <dt
              class=""
            >
              Services
            </dt>
            <dd
              class=""
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
            <dt
              class=""
            >
              Running processes
            </dt>
            <dd
              class=""
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
            <dt
              class=""
            >
              Repositories
            </dt>
            <dd
              class=""
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`ConfigurationCard should render correctly with data 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-2"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-2"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Configuration
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Installed packages
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//installed_packages"
              >
                1 package
              </a>
            </dd>
            <dt
              class=""
            >
              Services
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//services"
              >
                1 service
              </a>
            </dd>
            <dt
              class=""
            >
              Running processes
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//running_processes"
              >
                1 process
              </a>
            </dd>
            <dt
              class=""
            >
              Repositories
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//repositories"
              >
                1 enabled
              </a>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`ConfigurationCard should render enabled/disabled 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-3"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-3"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Configuration
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Installed packages
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//installed_packages"
              >
                1 package
              </a>
            </dd>
            <dt
              class=""
            >
              Services
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//services"
              >
                1 service
              </a>
            </dd>
            <dt
              class=""
            >
              Running processes
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//running_processes"
              >
                1 process
              </a>
            </dd>
            <dt
              class=""
            >
              Repositories
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//repositories"
              >
                1 enabled / 1 disabled
              </a>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`ConfigurationCard should render extra 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-13"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-13"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Configuration
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Installed packages
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//installed_packages"
              >
                1 package
              </a>
            </dd>
            <dt
              class=""
            >
              Services
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//services"
              >
                1 service
              </a>
            </dd>
            <dt
              class=""
            >
              Running processes
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//running_processes"
              >
                1 process
              </a>
            </dd>
            <dt
              class=""
            >
              Repositories
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//repositories"
              >
                1 enabled
              </a>
            </dd>
            <dt
              class=""
            >
              something
            </dt>
            <dd
              class=""
            >
              test
            </dd>
            <dt
              class=""
            >
              with click
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//undefined"
              >
                1 tests
              </a>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;
